# FantasyBaseballTools

./: .gitignore  DataProcessing.py  PointsPredictor3.py  README.md  config.py  model_predictions_sorted.csv  points_predictor.py  pyproject.toml  requirements.txt
DataProcessing/: BatterDataProcessing.py  DataPipelines.py  DataProcessing.py  DataProcessingComposition.py  RelieverDataProcessing.py  StarterDataProcessing.py
FangraphsScraper/: fangraphsScraper.py
PointsPredictors/: PointsPredictor3.py  Predict2025.py
Predictors/: PointsPredictor3.py  Predict2025.py
StatCategoryPredictions/: CategoryPredictions.py
src/DataProcessing/: BatterDataProcessing.py  DataPipelines.py  DataProcessing.py  RelieverDataProcessing.py  StarterDataProcessing.py
src/FangraphsScraper/: fangraphsScraper.py
src/ModelPredictions/: ModelTraining.py  PredictFutureYear.py
src/PointsPredictors/: PointsPredictor3.py  Predict2025.py
src/StatCategoryPredictions/: CategoryPredictions.py
tests/: test_points_predictor.py  test_scraper.py
