[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fdp2"
version = "0.1.0"
description = "Fantasy baseball data processing and prediction"
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "numpy",
    "scikit-learn", 
    "xgboost",
    "lxml",
    "requests"
    # add other dependencies as needed
]

[tool.setuptools]
packages = ["src"]
package-dir = {"" = "."}